--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,9 +1,11 @@
 {% load i18n cms_tags sekizai_tags %}
 
 <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}">
-{#    <div class="col-xs-12 sideListBoxTitle">#}
-{#        THIS IS THE TITLE#}
-{#    </div>#}
+{#    {% if "TWA Main Page" == current_page %}#}
+        <div class="col-xs-12 sideListBoxTitle">
+            {{ current_page }}
+        </div>
+{#    {% endif %}#}
 {% for article in articles %}
     <div class="col-xs-12 sideListItem">
         <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
