--- a/mainsite/templates/twa_home.html
+++ b/mainsite/templates/twa_home.html
@@ -13,10 +13,10 @@
             </div>
             <div class="row content-area padZero">
 
-                <div class="col-xs-12 col-sm-8 featurecol">
+                <div class="col-sm-12 col-md-8 featurecol">
                     {% placeholder "feature" %}
                 </div>
-                <div class="col-xs-12 col-sm-4 editorialcol">
+                <div class="col-sm-12 col-md-4 editorialcol">
                     {% placeholder "editorial" %}
                 </div>
 
@@ -28,7 +28,7 @@
             <div class="row content-area">
                 <div class="col-sm-12 areaContent">
                     {% placeholder "notice" %}
-                    {% placeholder "page title" %}
+{#                    {% placeholder "page title" %}#}
                     {% placeholder "content" %}
                 </div>
             </div>
