--- a/mainsite/templates/twa_subpage.html
+++ b/mainsite/templates/twa_subpage.html
@@ -10,7 +10,7 @@
 {#        <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>#}
 {#        <!-- AdSpeed.com End -->#}
 {#    </div>#}
-
+<div class="container">
     <div class="row content-area">
         <div class="col-sm-8 areaContent">
             {% placeholder "notice" %}
@@ -22,7 +22,7 @@
             {% placeholder "additional-content" %}
         </div>
     </div>
-
+</div>
     {% include 'include_hide_ads.html' %}
 
 {% endblock content %}
