--- a/spe_blog/templates/spe_blog/plugins/side_list.html
+++ b/spe_blog/templates/spe_blog/plugins/side_list.html
@@ -1,19 +1,34 @@
-{% load i18n cms_tags sekizai_tags %}
+{% load i18n cms_tags sekizai_tags tostring %}
 
 <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }}">
-{#    {% if "TWA Main Page" == current_page %}#}
+    {% if current_page.parent|tostring == "TWA" %}
         <div class="col-xs-12 sideListBoxTitle">
-            {{ current_page }}
+            <span class="boxTitleText col-xs-12">Most Read</span>
         </div>
-{#    {% endif %}#}
+    {% endif %}
 {% for article in articles %}
-    <div class="col-xs-12 sideListItem">
-        <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
-        <span class="sideListDate">{{ article.date|date:"d F Y" }}</span>
-        {% if article.is_readable == True %}
-            | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+{#    <div class="row">#}
+        <div class="row sideListItem">
+        {% if current_page.parent|tostring == "TWA" %}
+            <span class="col-xs-1 sideListNum">{{ forloop.counter }}</span>
+            <div class="col-xs-11">
+        {% else %}
+            <div class="col-xs-12">
         {% endif %}
-    </div>
+{#            <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title|truncatewords:10 }}</a></span><br>#}
+            <span class="sideListTitle"><a href={{ article.get_absolute_url}}>{{ article.title }}</a></span><br>
+            <span class="sideListDate">{{ article.date|date:"d F Y" }}</span>
+        {% if current_page.parent|tostring == "TWA" %}
+            <span class="sideListAuthor">{{ article.author }}</span>
+        {% else %}
+            {% if article.is_readable == True %}
+                | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
+            {% endif %}
+        {% endif %}
+            </div>
+        </div>
+{#    </div>#}
+
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
 {% endfor %}
@@ -28,4 +43,3 @@
         });
     </script>
 {%  endaddtoblock %}
-
