--- a/mainsite/templates/twa_detailpage.html
+++ b/mainsite/templates/twa_detailpage.html
@@ -4,7 +4,7 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
-
+<div class="container">
     <div class="row content-area">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
@@ -14,7 +14,7 @@
             {% placeholder "additional-content" %}
         </div>
     </div>
-
+</div>
     {% include 'include_hide_ads.html' %}
 
 {% endblock content %}
