--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -5,11 +5,6 @@
 
 .tiletitlehr {
   display:              none;
-  //margin-top:           0;
-  //height:               5px;
-  //border:               none;
-  //color:                $col-hrblue;
-  //background-color:     $col-hrblue;
 }
 .topictitles {
   color:                $col-copygrey;
@@ -42,7 +37,7 @@
 }
 .tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou {
   margin-bottom:        10px;
-  padding:              15px;
+  //padding:              15px;
   min-width:            150px;
 }
 .tile-alert {
