--- a/mainsite/static/twa/css/mainstyle.css
+++ b/mainsite/static/twa/css/mainstyle.css
@@ -5,6 +5,8 @@
 /* VARIABLES
 ====================================================================== */
 /* Images */
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 { padding: 0; }
+
 /* ************************ */
 /* BASE HTML STYLES         */
 body { font-family: "proxima-nova", sans-serif; font-size: 14px !important; }
@@ -368,7 +370,7 @@ table th, table td { padding: 5px; }
 .tileText { color: #2a2a2a; }
 .tileText:hover { color: #2a2a2a; }
 
-.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou { margin-bottom: 10px; padding: 15px; min-width: 150px; }
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou { margin-bottom: 10px; min-width: 150px; }
 
 .tile-alert { background-color: #bf1d21; color: white; }
 .tile-alert p { margin: 0; }
@@ -605,3 +607,5 @@ table th, table td { padding: 5px; }
   #printMe { position: absolute; left: 0; top: 0; font-size: 20pt; width: 100%; }
   .articleBodyText, .articleBodyText p { font-family: Arial, sans-serif; font-size: 20pt; width: 100%; } }
 .panel { background-color: transparent; }
+
+.bscol .tile-editorial { margin-top: 10px; }
