--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -1,9 +1,11 @@
-{% load cms_tags sekizai_tags tz removepub %}
+{% load cms_tags sekizai_tags tz removepub tostring %}
 
 <!-- ARTICLE DETAIL BEGIN -->
 {% addtoblock "title2" %}{{ article.title }}{% endaddtoblock %}
 
 <div class="row articleDetail" id="printMe">
+
+{% if current_page.parent|tostring == "TWA" %}
     <div class="row articleTitleBox text-center">
         <div class="col-sm-12">
             <span class="categoryTitle">{{ article.category|removepub }}</span>
@@ -28,6 +30,23 @@
             {% include 'include_article_shares.html' %}
         </div>
     </div>
+{% else %}
+    <div class="col-sm-12 articleTitleBox">
+        <hr class="tiletitlehr">
+        <h2 class="tiletitles">{{ article.title }}</h2>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 tiletitlehr"></div>
+        <div class="col-xs-7 col-sm-7 col-md-8 articleAuthorBox">
+            {% if article.author %}{{ article.author }} | {% endif %}<span class="articleDate">{{ article.date|date:"d F Y" }}</span>
+        </div>
+        <div class="col-md-4 articleShares text-right dontPrintMe">
+            {% include 'include_article_shares.html' %}
+        </div>
+        <div class="col-xs-12 dottedSpacer"></div>
+    </div>
+{% endif %}
+
 
 {% if article.topics.all %}
     <div class="row">
