--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -16,17 +16,17 @@
         <div class="col-md-2 articleDate">
             {{ article.date|date:"d F Y" }}
         </div>
-        <div class="col-md-5 authorName text-center">
+        <div class="col-md-6 authorName text-center">
             {% if article.author %}{{ article.author }}{% endif %}
         </div>
-        <div class="col-md-2 ratingStars text-center">
-            <i class="fa fa-star" aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-            <i class="fa fa-star" aria-hidden="true"></i>
-            <i class="fa fa-star-half-o" aria-hidden="true"></i>
-            <i class="fa fa-star-o" aria-hidden="true"></i>
-        </div>
-        <div class="col-md-3 articleShares text-center dontPrintMe">
+{#        <div class="col-md-2 ratingStars text-center">#}
+{#            <i class="fa fa-star" aria-hidden="true"></i>#}
+{#            <i class="fa fa-star" aria-hidden="true"></i>#}
+{#            <i class="fa fa-star" aria-hidden="true"></i>#}
+{#            <i class="fa fa-star-half-o" aria-hidden="true"></i>#}
+{#            <i class="fa fa-star-o" aria-hidden="true"></i>#}
+{#        </div>#}
+        <div class="col-md-4 articleShares text-center dontPrintMe">
             {% include 'include_article_shares.html' %}
         </div>
     </div>
