--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -167,7 +167,7 @@
     position:           relative;
 
     .story-text {
-      padding:          75px 15px 15px 15px;
+      padding:          15px 15px 15px 15px;
       background:       $img-twa-feature repeat-x top right;
       background-size:  contain;
       position:         absolute;
@@ -182,6 +182,10 @@
       }
     }
   }
+}
+.story-contents {
+  position: absolute;
+  bottom:   15px;
 }
 .featured-story {
   padding:              10px;
