--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -17,7 +17,9 @@ h1, h2, h3, h4 {
   font-family:            $font-titles;
   font-weight:            $font-bold;
 }
-
+h2 {
+  font-size: 20px;
+}
 * {
   -webkit-border-radius:  0 !important;
   -moz-border-radius:     0 !important;
