TWA Size tweaks

--- a/mainsite/static/twa/css/_content.scss
+++ b/mainsite/static/twa/css/_content.scss
@@ -616,13 +616,16 @@
   padding:              0;
 }
 .editorialcol {
-  padding:            10px;
+  padding:              10px;
 }
 .featurecol {
   //overflow: hidden;
 }
 .areaContent {
   padding-right:        15px;
+}
+.areaRightSide {
+  padding-left:         15px;
 }
 .issuebar, .issueItem {
   cursor:               pointer;
