--- a/mainsite/static/twa/css/mainstyle.css
+++ b/mainsite/static/twa/css/mainstyle.css
@@ -13,7 +13,9 @@ body { font-family: "proxima-nova", sans-serif; font-size: 14px !important; }
 
 h1, h2, h3, h4 { font-family: "Roboto Slab", serif; font-weight: 700; }
 
-h2 { font-size: 20px; }
+h3 { font-size: 20px; }
+
+h2 { font-size: 16px; }
 
 * { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; border-radius: 0 !important; }
 
@@ -316,6 +318,8 @@ a:hover { text-decoration: none; }
 .editorialcol { padding: 10px; }
 
 .areaContent { padding-right: 15px; }
+
+.areaRightSide { padding-left: 15px; }
 
 .issuebar, .issueItem { cursor: pointer; }
 .issuebar:hover, .issueItem:hover { background-color: #e4e1d8; }
