--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -17,8 +17,11 @@ h1, h2, h3, h4 {
   font-family:            $font-titles;
   font-weight:            $font-bold;
 }
+h3 {
+  font-size:              20px;
+}
 h2 {
-  font-size: 20px;
+  font-size:              16px;
 }
 * {
   -webkit-border-radius:  0 !important;
