More font & spacing tweaks

--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -210,11 +210,11 @@
       h2 {
         font-family:    $font-tiletitle;
         font-weight:    600;
+        font-size:      20px;
       }
     }
   }
 }
-
 .story-text {
       //height:           175px;
       overflow:         hidden;
