Take out JD Wuz Here, CSS tweaks

--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -60,16 +60,16 @@
             </div>
         </div>
 
-    {% addtoblock "js" %}
-        <script type="text/javascript" charset="utf-8">
-            $( document ).ready(function() {
-
-                // Add JQuery Here
-                console.log("JD WUZ HEER!");
-
-            });
-        </script>
-    {%  endaddtoblock %}
+{#    {% addtoblock "js" %}#}
+{#        <script type="text/javascript" charset="utf-8">#}
+{#            $( document ).ready(function() {#}
+{##}
+{#                // Add JQuery Here#}
+{#                console.log("JD WUZ HEER!");#}
+{##}
+{#            });#}
+{#        </script>#}
+{#    {%  endaddtoblock %}#}
     <!-- HEADER END -->
 
 {% endblock content_header %}
