--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -341,7 +341,8 @@
   }
 }
 .tile-textbelow {
-  padding-bottom:       20px;
+  //padding-bottom:       20px;
+  padding:              0 15px 20px 15px;
 }
 .tile-curntIssue {
   min-height:           150px;
