last tweak didn't take. Fixed it.

--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -342,7 +342,7 @@
 }
 .tile-textbelow {
   //padding-bottom:       20px;
-  padding:              0 15px 20px 15px;
+  padding:              0 15px 20px 0;
 }
 .tile-curntIssue {
   min-height:           150px;
