--- a/mainsite/static/twa/css/mainstyle.css
+++ b/mainsite/static/twa/css/mainstyle.css
@@ -469,7 +469,7 @@ table th, table td { padding: 5px; }
 .tile-editorial-txtblck a { color: #2a2a2a; }
 .tile-editorial-txtblck .sideListDate { color: #bf1d21; }
 
-.tile-textbelow { padding-bottom: 20px; }
+.tile-textbelow { padding: 0 15px 20px 0; }
 
 .tile-curntIssue { min-height: 150px; border-bottom: 1px dotted #2a2a2a; margin-bottom: 20px; padding: 15px 0; }
 .tile-curntIssue a { color: #2a2a2a; }
