changed the model for links to be relative; fixed the index to use get_absolute_url which contains the logic for a page vs external url.  Also fixed the title on generic article and detail pages under the new staff directory

--- a/spe_blog/templates/spe_blog/article_index.html
+++ b/spe_blog/templates/spe_blog/article_index.html
@@ -1,6 +1,7 @@
 {% extends "staff_base.html" %}
 {% load cms_tags sekizai_tags %}
 
+{% block title %}Admin: Articles{% endblock title %}
 {% block content %}
 
     {% addtoblock "css" %}
