--- a/spe_blog/templates/spe_blog/article_detail.html
+++ b/spe_blog/templates/spe_blog/article_detail.html
@@ -1,6 +1,7 @@
 {% extends base_template %}
 {% load cms_tags sekizai_tags %}
 
+{% block title %}{{ article.publication.code }}: {{ article.title }}{% endblock title %}
 {% block content %}
     <div class="row adRow2" id="adRow2">
         <div class="col-xs-12 adZone2 text-center" id="adZone2">
