Glenda's Weekend Notes Part 1

--- a/mainsite/static/twa/css/_content.scss
+++ b/mainsite/static/twa/css/_content.scss
@@ -414,7 +414,7 @@
 }
 .articleDate {
   white-space:            nowrap;
-  color:                  $col-boxshadow;
+  color:                  $col-basegrey;
     font-weight:          $font-light;
 }
 //.boxTitle {
