--- a/mainsite/templates/include_topbar.html
+++ b/mainsite/templates/include_topbar.html
@@ -6,7 +6,7 @@
             <li><a href="http://www.spe.org/jpt/">JPT</a></li>
             <li><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></li>
             <li><a href="http://www.spe.org/hsenow/">HSE Now</a></li>
-            <li><a href="http://www.spe.org/twa/">The WAY Ahead</a></li>
+            <li><a href="http://www.spe.org/twa/">The Way Ahead</a></li>
         </ul>
     </div>
     <div class="col-sm-4 text-right topbarcol">
