--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below_full.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n tostring %}
 <div class="row padZero margZero">
 {% for article in articles %}
         <article class="col-sm-12 tile-textbelow story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}">
@@ -12,7 +12,7 @@
                 {% endif %}
                 <div class="story-text">
                     <span class="pub-date">{{ article.date|date:"d F Y" }}
-                        {% if article.is_readable == True %}{# check if the article is locked or not and indicate #}
+                        {% if current_page.parent|tostring == "OGF" and article.is_readable == True %}{# check if the article is locked or not and indicate #}
                             | <span class="sideListLock" data-toggle="tooltip" data-placement="bottom" title="Article is free to view">&nbsp;<i class="fa fa-unlock"></i></span>
                         {% endif %}
                         </span>
