--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -126,7 +126,7 @@
   .story-wrap {
 
     .pub-date {
-      color:            $col-red;
+      color:            $col-orange;
       display:          block;
       text-transform:   uppercase;
       font-size:        12px;
@@ -264,7 +264,19 @@
   font-weight:          $font-bold;
   font-family:          $font-tiletitle;
   margin-top:           5px;
-  padding:              5px 0;
+  padding:              5px 0 0 10px;
+  line-height:          1em;
+
+  a:hover {
+    color:              $col-bluehover;
+  }
+}
+.sideListTitleTWA {
+  font-size:            15px;
+  font-weight:          $font-bold;
+  font-family:          $font-tiletitle;
+  margin-top:           5px;
+  padding:              5px 0 0 0;
   line-height:          1em;
 
   a:hover {
@@ -274,17 +286,23 @@
 .sideListDate {
   color:                $col-yellow;
   font-weight:          $font-light;
+  padding:              0 0 0 10px;
+}
+.sideListDateTWA {
+  color:                $col-orange;
+  font-weight:          $font-light;
+  padding:              0 0 0 0;
 }
 .sideListLock {
   color:                $col-red;
 }
 .sideListTeaser {
-  padding:              0 0 10px 0;
+  padding:              0 0 10px 10px;
   border-bottom:        1px dotted $col-white;
   margin-bottom:        10px;
 }
 .sideListIntro {
-  padding:              10px 0 0 0;
+  padding:              10px 0 0 10px;
 }
 .tile-editorial {
   background-color:     $col-black;
